--- a/pom.xml
+++ b/pom.xml
@@ -80,36 +80,43 @@
       <groupId>org.webjars</groupId>
       <artifactId>require-css</artifactId>
       <version>0.1.7</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>requirejs-domready</artifactId>
       <version>2.0.1-2</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables</artifactId>
       <version>1.10.4</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables-colvis</artifactId>
       <version>1.1.1</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables-fixedcolumns</artifactId>
       <version>3.0.2</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables-fixedheader</artifactId>
       <version>2.1.2</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables-plugins</artifactId>
       <version>9dcbecd42ad</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
@@ -118,9 +125,8 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <!-- Try releasing with release plugin 2.5 since it has failed with the lastest
-               (seems there are a couple of bugs) -->
-          <version>2.5</version>
+          <!-- Use a version compatible with latest maven 1.9+ -->
+          <version>2.5.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
